hermes_fuzz_executed_few_shot/fuzz_33_execution
'use strict';

async function test() { console.log('A'); await 1; await 2; console.log('B'); }
test().then(() => setTimeout(() => test(), 3));  
 
```

## Future
- Incomplete ES Modules implementation
- Support BigInt
- Support classes
- Support ES6 Maps
- Optional chaining support
- Shorthand property support
- Async function
- Destructuring assignment
- BigInt
- Template strings
- Destructuring with arrays
- Destructuring with Object Literal properties
- Classes and method definition
- ES6 Rest Parameter support
- Map Iterator Iterator Next() and Iteration Next()
- Map.prototype.delete()
- Map Iterator.next()
- Map Iterator.next().done
- Symbol.prototype.description
- Symbol.prototype.unscopables
- Symbol.prototype.species
- Map Iterator Map Next Set.prototype.has()
- Map Iterator Map Next Set.prototype.clear()
  
## License
[MIT](https: 


Execution Output ------------------:
test.js:35:1: error: non-terminated template literal

^
test.js:6:3: note: template literal started here
```
  ^
test.js:35:1: error: invalid expression

^
